# grafyte

./: .clang-tidy  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile
.github/workflows/: linux-pr-matrix.yml  tests-light.yml  tests.yml  windows-pr-matrix.yml
docs/readthedocs/: 01_installation.rst  02_introduction.rst  03_initializing.rst  04_main_loop.rst  05_colors.rst  06_input.rst  07_advanced_input.rst  08_representing_entities.rst  09_advanced_concepts.rst  10_bouncing_square.rst  api.rst  conf.py  index.rst  installation.rst  introduction.rst  quickstart.rst
engine/: CMakeLists.txt  CMakePresets.json  vcpkg.json
engine/bindings/: bind_application.cpp  bind_camera.cpp  bind_input.cpp  bind_object.cpp  bind_scene.cpp  bind_text.cpp  bind_types.cpp  bind_ui.cpp  bindings.cpp  bindings_common.hpp
engine/src/Collisions/: CollisionManager.cpp  CollisionManager.h  Shapes.h
engine/src/GL-Core/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
engine/src/High/: Application.cpp  Application.h
engine/src/Inputs/: InputManager.cpp  InputManager.h  Keys.h
engine/src/Physics/Collisions/: CollisionSolver.cpp  CollisionSolver.h  SpatialGrid.cpp  SpatialGrid.h
engine/src/Scene/: Scene.cpp  Scene.h
engine/src/Scene/Managers/: CollisionManager.cpp  CollisionManager.h  MaterialManager.cpp  MaterialManager.h  MeshManager.cpp  MeshManager.h  Shapes.h
engine/src/Scene/Text/: TextObject.cpp  TextObject.h
engine/src/Text/: Font.h  Text.h  TextRenderer.cpp  TextRenderer.h
engine/src/UI/: UIManager.cpp  UIManager.h
engine/src/World/: Camera.h  World.cpp  World.h
engine/tests/: test_camera.cpp  test_collision_solver.cpp  test_spatial_grid.cpp  test_support.h  test_types.cpp
engine/utils/: GlContextState.h  macros.hpp  types.h  utils.hpp
engine/utils/embedd/: EmbeddedAsset.cpp  EmbeddedAsset.h  basic_shader.embed  default_texture.embed  inter_font.embed  text_shader.embed  texture_shader.embed
scripts/: build-wheels.bat  build-wheels.sh  docker-build-wheels.sh  force_platlib_wheel.py  install-wheels.bat  install-wheels.sh  setup.bat  setup.sh  test.bat
src/__grafyte_internal/: __init__.py  __init__.pyi
src/grafyte/: __class_utils.py  __converters.py  __init__.py  __init__.pyi
tests/: test.py
tests/res/shaders/: Basic.shader  Text.shader  Texture.shader
tests/units/: _unit_test_support.py  test_import.py  test_unit_class_utils.py  test_unit_converters.py  test_unit_wrappers.py
tools/: setup.py
