[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Grafyte"
version = "0.1.2"
description = "A simple rendering engine with some game engine features made in OpenGL for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Saubion Sami", email = "sami.saubion@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
