[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafyte"
version = "0.2.0"
description = "A simple rendering engine with some game engine features made with OpenGL for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Saubion Sami", email = "sami.saubion@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
