[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = 0

[project]
name = "grafyte"
version = "0.3.3"
description = "A simple rendering engine with some game engine features made with OpenGL for Python"
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = { text = "MIT" }
authors = [
    { name = "Saubion Sami", email = "sami.saubion@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
